Fixing sizing/spacing for disabled checkboxes

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -314,6 +314,7 @@ label.with-checkbox {
             background: #eee;
             border: 0.125rem solid #ccc;
             cursor: not-allowed;
+            padding: 0.125rem;
             &:before {
                 color: #ccc;
                 text-shadow: none;
